--- a/vercel.json
+++ b/vercel.json
@@ -9,10 +9,20 @@
     "routes": [
         {
             "src": "/build/(.*)",
-            "dest": "/public/build/$1"
+            "dest": "/public/build/$1",
+            "headers": {
+                "Cache-Control": "public, max-age=31536000, immutable"
+            }
         },
         {
-            "src": "/(css|js|images|fonts|storage)/(.*)",
+            "src": "/(css|js)/(.*)",
+            "dest": "/public/$1/$2",
+            "headers": {
+                "Cache-Control": "public, max-age=31536000, immutable"
+            }
+        },
+        {
+            "src": "/(images|fonts|storage)/(.*)",
             "dest": "/public/$1/$2"
         },
         {
@@ -20,7 +30,7 @@
             "dest": "/public/favicon.ico"
         },
         {
-            "src": "/(.*\\.(css|js|json|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot))",
+            "src": "/(.*\\.(css|js|json|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|webp))",
             "dest": "/public/$1"
         },
         {
@@ -28,11 +38,11 @@
             "dest": "/api/index.php"
         }
     ],
-    "buildCommand": "npm install && npm run build",
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "false",
         "APP_URL": "https://ppid-pengadilan-negeri.vercel.app",
+        "ASSET_URL": "https://ppid-pengadilan-negeri.vercel.app",
         "APP_KEY": "base64:TGaVaXwhWgjn9akhE4SCSIjGG/cQqvICUQ+PgLA3Bs0=",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
